tree: rename per-board firmware main file to main.c

--- a/flight/targets/coptercontrol/fw/Makefile
+++ b/flight/targets/coptercontrol/fw/Makefile
@@ -170,7 +170,7 @@ SRC += ${foreach MOD, ${OPTMODULES}, ${wildcard ${OPMODULEDIR}/${MOD}/*.c}}
 SRC += ${foreach MOD, ${MODULES}, ${wildcard ${OPMODULEDIR}/${MOD}/*.c}}
 ## OPENPILOT CORE:
 SRC += ${OPMODULEDIR}/System/systemmod.c
-SRC += coptercontrol.c
+SRC += main.c
 SRC += pios_board.c
 SRC += $(FLIGHTLIB)/alarms.c
 SRC += $(OPUAVTALK)/uavtalk.c
