makefile: add pios_heap.c to all BL, BU and FW builds

--- a/flight/targets/bl/f1/Makefile
+++ b/flight/targets/bl/f1/Makefile
@@ -79,6 +79,7 @@ SRC += $(PIOSCOMMON)/pios_com_msg.c
 SRC += $(PIOSCOMMON)/printf-stdarg.c
 SRC += $(PIOSCOMMON)/pios_usb_desc_hid_only.c
 SRC += $(PIOSCOMMON)/pios_usb_util.c
+SRC += $(PIOSCOMMON)/pios_heap.c
 
 ## Libraries for flight calculations
 SRC += $(FLIGHTLIB)/fifo_buffer.c
