--- a/flight/targets/bl/f4/Makefile
+++ b/flight/targets/bl/f4/Makefile
@@ -66,6 +66,7 @@ SRC += $(PIOSCOMMON)/pios_usb_desc_hid_only.c
 SRC += $(PIOSCOMMON)/pios_usb_util.c
 SRC += $(PIOSCOMMON)/pios_flash.c
 SRC += $(PIOSCOMMON)/pios_flash_jedec.c
+SRC += $(PIOSCOMMON)/pios_heap.c
 
 # List any extra directories to look for include files here.
 #    Each directory must be seperated by a space.
