heap: use sim-specific version of pios_heap

--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -169,7 +169,6 @@ SRC += $(PIOSCOMMON)/pios_flashfs_logfs.c
 SRC += $(PIOSCOMMON)/pios_rcvr.c
 SRC += $(PIOSCOMMON)/pios_sensors.c
 SRC += $(PIOSCOMMON)/pios_board_info.c
-SRC += $(PIOSCOMMON)/pios_heap.c
 
 SRC += $(PIOSPOSIX)/pios_gcsrcvr.c
 SRC += $(PIOSPOSIX)/pios_delay.c
@@ -182,6 +181,7 @@ SRC += $(PIOSPOSIX)/pios_servo.c
 SRC += $(PIOSPOSIX)/pios_sys.c
 SRC += $(PIOSPOSIX)/pios_tcp.c
 SRC += $(PIOSPOSIX)/pios_debug.c
+SRC += $(PIOSPOSIX)/pios_heap.c
 
 EXTRAINCDIRS += $(PIOSCOMMON)/inc
 
