--- a/flight/targets/revolution/fw/Makefile.posix
+++ b/flight/targets/revolution/fw/Makefile.posix
@@ -157,7 +157,6 @@ SRC += $(PIOSCOMMON)/pios_flashfs_logfs.c
 SRC += $(PIOSCOMMON)/pios_rcvr.c
 SRC += $(PIOSCOMMON)/pios_sensors.c
 SRC += $(PIOSCOMMON)/pios_board_info.c
-SRC += $(PIOSCOMMON)/pios_heap.c
 
 SRC += $(PIOSPOSIX)/pios_gcsrcvr.c
 SRC += $(PIOSPOSIX)/pios_delay.c
@@ -170,6 +169,7 @@ SRC += $(PIOSPOSIX)/pios_servo.c
 SRC += $(PIOSPOSIX)/pios_sys.c
 SRC += $(PIOSPOSIX)/pios_tcp.c
 SRC += $(PIOSPOSIX)/pios_debug.c
+SRC += $(PIOSPOSIX)/pios_heap.c
 
 EXTRAINCDIRS += $(PIOSCOMMON)/inc
 
