Sparky BGC: use library_fw.mk

--- a/flight/targets/sparkybgc/fw/Makefile
+++ b/flight/targets/sparkybgc/fw/Makefile
@@ -115,7 +115,7 @@ SRC += $(MATHLIB)/pid.c
 SRC += $(MATHLIB)/atmospheric_math.c
 
 ## PIOS Hardware (STM32F30x)
-include $(PIOS)/STM32F30x/library.mk
+include $(PIOS)/STM32F30x/library_fw.mk
 
 ## PIOS Hardware (Common)
 SRC += $(PIOSCOMMON)/pios_mpu6050.c
