bl unified: rename tl_dfu.c to main.c

--- a/flight/targets/bl/f3/Makefile
+++ b/flight/targets/bl/f3/Makefile
@@ -45,7 +45,7 @@ STMSPDINCDIR = $(STMSPDDIR)/inc
 # use file-extension c for "c-only"-files
 
 ## Bootloader (architecture specific)
-SRC += $(BLCOMMONDIR)/tl_dfu.c
+SRC += $(BLCOMMONDIR)/main.c
 SRC += $(BLCOMMONDIR)/led_pwm.c
 SRC += $(BLCOMMONDIR)/bl_xfer.c
 
