--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -121,7 +121,7 @@ SRC =
 ## RTOS and RTOS Portable 
 SRC += $(RTOSSRCDIR)/list.c
 SRC += $(RTOSSRCDIR)/queue.c
-SRC += $(RTOSSRCDIR)/tasks.c
+SRC += $(RTOSSRCDIR)/task.c
 SRC += $(RTOSSRCDIR)/timers.c
 SRC += $(RTOSSRCDIR)/portable/GCC/Posix/port.c
 SRC += $(RTOSSRCDIR)/portable/MemMang/heap_3.c
