all targets: renamed I2C_WDG_STATS_DIAGNOSTICS to WDG_STATS_DIAGNOSTICS

--- a/flight/targets/revolution/fw/Makefile
+++ b/flight/targets/revolution/fw/Makefile
@@ -292,7 +292,7 @@ CFLAGS += $(ARCHFLAGS)
 CFLAGS += -DSTACK_DIAGNOSTICS
 CFLAGS += -DMIXERSTATUS_DIAGNOSTICS
 CFLAGS += -DRATEDESIRED_DIAGNOSTICS
-CFLAGS += -DI2C_WDG_STATS_DIAGNOSTICS
+CFLAGS += -DWDG_STATS_DIAGNOSTICS
 CFLAGS += -DDIAG_TASKS
 
 # configure CMSIS DSP Library
