--- a/flight/targets/revolution/fw/Makefile.posix
+++ b/flight/targets/revolution/fw/Makefile.posix
@@ -35,7 +35,7 @@ DEBUG ?= YES
 STACK_DIAGNOSTICS ?= NO
 MIXERSTATUS_DIAGNOSTICS ?= NO
 RATEDESIRED_DIAGNOSTICS ?= NO
-I2C_WDG_STATS_DIAGNOSTICS ?= NO
+WDG_STATS_DIAGNOSTICS ?= NO
 DIAG_TASKS ?= NO
 
 #Or just turn on all the above diagnostics. WARNING: This consumes massive amounts of memory.
@@ -55,8 +55,8 @@ ifneq (,$(filter YES,$(RATEDESIRED_DIAGNOSTICS) $(ALL_DIAGNOSTICS)))
 CFLAGS += -DRATEDESIRED_DIAGNOSTICS
 endif
 
-ifneq (,$(filter YES,$(I2C_WDG_STATS_DIAGNOSTICS) $(ALL_DIAGNOSTICS)))
-CFLAGS += -DI2C_WDG_STATS_DIAGNOSTICS
+ifneq (,$(filter YES,$(WDG_STATS_DIAGNOSTICS) $(ALL_DIAGNOSTICS)))
+CFLAGS += -DWDG_STATS_DIAGNOSTICS
 endif
 
 ifneq (,$(filter YES,$(DIAG_TASKS) $(ALL_DIAGNOSTICS)))
