--- a/flight/targets/bu/f1/Makefile
+++ b/flight/targets/bu/f1/Makefile
@@ -62,6 +62,8 @@ SRC += $(PIOSSTM32F10X)/pios_flash_internal.c
 ## PIOS Hardware (Common)
 SRC += $(PIOSCOMMON)/pios_flash.c
 SRC += $(PIOSCOMMON)/pios_heap.c
+SRC += $(PIOSCOMMON)/pios_semaphore.c
+
 
 ## CMSIS for STM32
 SRC += $(CMSISDIR)/core_cm3.c
