--- a/flight/targets/freedom/fw/Makefile
+++ b/flight/targets/freedom/fw/Makefile
@@ -177,6 +177,8 @@ SRC += $(PIOSCOMMON)/pios_usb_util.c
 SRC += $(PIOSCOMMON)/pios_adc.c
 SRC += $(PIOSCOMMON)/pios_flash.c
 SRC += $(PIOSCOMMON)/pios_heap.c
+SRC += $(PIOSCOMMON)/pios_semaphore.c
+
 
 include ./UAVObjects.inc
 SRC += $(UAVOBJSRC)
