--- a/flight/targets/flyingf3/fw/Makefile
+++ b/flight/targets/flyingf3/fw/Makefile
@@ -58,6 +58,7 @@ OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Battery
 OPTMODULES += ComUsbBridge
 OPTMODULES += Airspeed/revolution
+OPTMODULES += HTelemetry
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
