--- a/flight/targets/revolution/fw/Makefile.posix
+++ b/flight/targets/revolution/fw/Makefile.posix
@@ -37,9 +37,13 @@ MIXERSTATUS_DIAGNOSTICS ?= NO
 RATEDESIRED_DIAGNOSTICS ?= NO
 WDG_STATS_DIAGNOSTICS ?= NO
 DIAG_TASKS ?= NO
+PATHDESIRED_DIAGNOSTICS ?= YES
 
 #Or just turn on all the above diagnostics. WARNING: This consumes massive amounts of memory.
 ALL_DIAGNOSTICS ?= YES
+
+# Optional module and driver defaults
+USE_PATHPLANNER ?= YES
 
 #The following Makefile command, ifneq (, $(filter) $(A), $(B) $(C)) is equivalent 
 # to the pseudocode `if(A== B || A==C)`
@@ -63,6 +67,14 @@ ifneq (,$(filter YES,$(DIAG_TASKS) $(ALL_DIAGNOSTICS)))
 CFLAGS += -DDIAG_TASKS
 endif
 
+ifneq (,$(filter YES,$(PATHDESIRED_DIAGNOSTICS) $(ALL_DIGNOSTICS)))
+CFLAGS += -DPATHDESIRED_DIAGNOSTICS
+endif
+
+ifeq ($(PATH_PLANNER), YES)
+CFLAGS += -DPATH_PLANNER
+endif
+
 # Since we are simulating all this firmware the code needs to know what the BL would
 # normally contain
 BLONLY_CDEFS += -DBOARD_TYPE=$(BOARD_TYPE)
@@ -82,14 +94,18 @@ MODULES += Actuator ManualControl Stabilization
 MODULES += Attitude/revolution
 MODULES += FirmwareIAP
 
-OPTMODULES += PathPlanner
 OPTMODULES += AltitudeHold 
-OPTMODULES += VtolPathFollower 
+OPTMODULES += PathManager
 OPTMODULES += FixedWingPathFollower
-OPTMODULES += GroundPathFollower
+#OPTMODULES += GroundPathFollower
 OPTMODULES += CameraStab
 OPTMODULES += OveroSync/simulated
 OPTMODULES += Autotune
+
+ifeq ($(USE_PATHPLANNER), YES)
+OPTMODULES += PathPlanner
+CFLAGS += -DPATH_PLANNER
+endif
 
 # To run simulation instead of connect to SITL
 MODULES += Sensors/simulated
@@ -140,11 +156,22 @@ SRC += $(FLIGHTLIB)/WorldMagModel.c
 SRC += $(FLIGHTLIB)/insgps13state.c
 SRC += $(FLIGHTLIB)/taskmonitor.c
 SRC += $(FLIGHTLIB)/sanitycheck.c
-SRC += $(FLIGHTLIB)/paths.c
+SRC += $(FLIGHTLIB)/path_planners/direct.c
+SRC += $(FLIGHTLIB)/path_planners/direct_with_filleting.c
+SRC += $(FLIGHTLIB)/path_managers/b_ball.c
+SRC += $(FLIGHTLIB)/path_managers/half_plane.c
+SRC += $(FLIGHTLIB)/paths_library/example_program.c
+SRC += $(FLIGHTLIB)/paths_library/simple_return_to_home.c
+SRC += $(FLIGHTLIB)/paths_library/simple_hold_position.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/simple_arc.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/roll_limited_arc.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/simple_line.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/roll_limited_line.c
 
 SRC += $(MATHLIB)/coordinate_conversions.c
 SRC += $(MATHLIB)/sin_lookup.c
 SRC += $(MATHLIB)/misc_math.c
+SRC += $(MATHLIB)/atmospheric_math.c
 SRC += $(MATHLIB)/pid.c
 
 ## PIOS Hardware (STM32F4xx)
