--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -84,9 +84,9 @@ MODULES += FirmwareIAP
 
 OPTMODULES += PathPlanner
 OPTMODULES += AltitudeHold 
-OPTMODULES += VtolPathFollower 
+#OPTMODULES += VtolPathFollower 
 OPTMODULES += FixedWingPathFollower
-OPTMODULES += GroundPathFollower
+#OPTMODULES += GroundPathFollower
 OPTMODULES += CameraStab
 OPTMODULES += OveroSync/simulated
 OPTMODULES += Autotune
@@ -152,11 +152,23 @@ SRC += $(FLIGHTLIB)/WorldMagModel.c
 SRC += $(FLIGHTLIB)/insgps13state.c
 SRC += $(FLIGHTLIB)/taskmonitor.c
 SRC += $(FLIGHTLIB)/sanitycheck.c
-SRC += $(FLIGHTLIB)/paths.c
+SRC += $(FLIGHTLIB)/path_planners/direct.c
+SRC += $(FLIGHTLIB)/path_planners/direct_with_filleting.c
+SRC += $(FLIGHTLIB)/path_managers/b_ball.c
+SRC += $(FLIGHTLIB)/path_managers/half_plane.c
+SRC += $(FLIGHTLIB)/paths_library/example_program.c
+SRC += $(FLIGHTLIB)/paths_library/simple_return_to_home.c
+SRC += $(FLIGHTLIB)/paths_library/simple_hold_position.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/simple_arc.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/roll_limited_arc.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/simple_line.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/roll_limited_line.c
+#SRC += $(FLIGHTLIB)/paths.c
 
 SRC += $(MATHLIB)/coordinate_conversions.c
 SRC += $(MATHLIB)/sin_lookup.c
 SRC += $(MATHLIB)/misc_math.c
+SRC += $(MATHLIB)/atmospheric_math.c
 SRC += $(MATHLIB)/pid.c
 
 ## PIOS Hardware (STM32F4xx)
