--- a/flight/targets/revomini/fw/Makefile
+++ b/flight/targets/revomini/fw/Makefile
@@ -31,6 +31,12 @@ include $(BOARD_INFO_DIR)/board-info.mk
 # Set to YES for debugging
 DEBUG ?= NO
 
+# @optbrief Include objects that are just nice information to show
+PATHDESIRED_DIAGNOSTICS ?= YES
+
+# Optional module and driver defaults
+USE_PATHPLANNER ?= YES
+
 # List of modules to include
 MODULES = Sensors
 MODULES += Attitude/revolution 
@@ -44,10 +50,8 @@ PYMODULES =
 
 OPTMODULES += GPS
 OPTMODULES += AltitudeHold 
-OPTMODULES += PathPlanner
-OPTMODULES += VtolPathFollower 
+OPTMODULES += PathManager
 OPTMODULES += FixedWingPathFollower
-OPTMODULES += GroundPathFollower
 OPTMODULES += CameraStab
 OPTMODULES += Autotune
 OPTMODULES += TxPID
@@ -55,6 +59,11 @@ OPTMODULES += Battery
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Airspeed/revolution
+
+ifeq ($(USE_PATHPLANNER), YES)
+OPTMODULES += PathPlanner
+CFLAGS += -DPATH_PLANNER
+endif
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
@@ -125,7 +134,17 @@ SRC += $(DEBUG_CM3_DIR)/dcc_stdio.c
 SRC += $(DEBUG_CM3_DIR)/cm3_fault_handlers.c
 #endif
 
-SRC += $(FLIGHTLIB)/paths.c
+SRC += $(FLIGHTLIB)/path_planners/direct.c
+SRC += $(FLIGHTLIB)/path_planners/direct_with_filleting.c
+SRC += $(FLIGHTLIB)/path_managers/b_ball.c
+SRC += $(FLIGHTLIB)/path_managers/half_plane.c
+SRC += $(FLIGHTLIB)/paths_library/example_program.c
+SRC += $(FLIGHTLIB)/paths_library/simple_return_to_home.c
+SRC += $(FLIGHTLIB)/paths_library/simple_hold_position.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/simple_arc.c
+SRC += $(FLIGHTLIB)/path_followers/constant_radius_arc/roll_limited_arc.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/simple_line.c
+SRC += $(FLIGHTLIB)/path_followers/straight_line/roll_limited_line.c
 SRC += $(FLIGHTLIB)/fifo_buffer.c
 SRC += $(FLIGHTLIB)/WorldMagModel.c
 SRC += $(FLIGHTLIB)/insgps13state.c
@@ -280,6 +299,14 @@ CFLAGS += $(ARCHFLAGS)
 
 CFLAGS += -DDIAGNOSTICS
 CFLAGS += -DDIAG_TASKS
+
+ifneq (,$(filter YES,$(PATHDESIRED_DIAGNOSTICS) $(ALL_DIGNOSTICS)))
+CFLAGS += -DPATHDESIRED_DIAGNOSTICS
+endif
+
+ifeq ($(PATH_PLANNER), YES)
+CFLAGS += -DPATH_PLANNER
+endif
 
 # configure CMSIS DSP Library
 CDEFS += -DARM_MATH_CM4
