HTELE: add support for freedom,revolution,revomini and sparky

--- a/flight/targets/revomini/fw/Makefile
+++ b/flight/targets/revomini/fw/Makefile
@@ -55,6 +55,7 @@ OPTMODULES += Battery
 OPTMODULES += VibrationAnalysis
 OPTMODULES += UAVOMavlinkBridge
 OPTMODULES += Airspeed/revolution
+OPTMODULES += HTelemetry
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
