Geofence: basic module that sets an alarm
This module provides a warning and error radius from
home and sets an alarm when the PositionActual UAVO
indicates we are further than that from home.

Conflicts:
	flight/targets/flyingf3/fw/Makefile
	flight/targets/freedom/fw/Makefile
	flight/targets/quanton/fw/Makefile
	flight/targets/revolution/fw/Makefile
	flight/targets/revomini/fw/Makefile
	flight/targets/sparky/fw/Makefile
	shared/uavobjectdefinition/modulesettings.xml

--- a/flight/targets/freedom/fw/Makefile
+++ b/flight/targets/freedom/fw/Makefile
@@ -63,6 +63,7 @@ OPTMODULES += UAVOFrSKYSensorHubBridge
 OPTMODULES += UAVOLighttelemetryBridge
 OPTMODULES += PicoC
 OPTMODULES += UAVOFrSKYSPortBridge
+OPTMODULES += Geofence
 
 PYMODULES = 
 #FlightPlan
