Android: rename logger to logging
Since logging is always running this is really to get
information about it rather that to be in charge. The
name change implies this.

--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -64,7 +64,7 @@
 		<activity android:name="ObjectEditor" android:label="ObjectEditor"
 		    android:windowSoftInputMode="stateHidden"
 			android:theme="@android:style/Theme.Dialog" />
-		<activity android:name="Logger" android:label="@string/logger"/>
+		<activity android:name="Logging" android:label="@string/logger"/>
 
 		<activity
 		    android:name="FragmentTester"
