--- a/package/Makefile.winx86
+++ b/package/Makefile.winx86
@@ -17,7 +17,7 @@ win_package: gcs package_flight package_matlab
 	$(V1) echo "  http://www.scratchpaper.com"
 	$(NSIS_CMD) $(NSIS_OPTS) $(NSIS_SCRIPT)
 
-gcs: uavobjects
+gcs: uavobjects_gcs
 	$(V1) $(MAKE) -C $(ROOT_DIR) GCS_BUILD_CONF=release $@
 
 ground_package: | win_package
