PicoC: First running version for quanton and flyingf4
This is a port of the famous PicoC-interpreter. It uses an optional
stdIO console over USART and/or telemetry tunnel.
Temporarly removed the missing sensors from the FF4 target in order to
make the naked DiscoveryF4 bootable. This also adds some missing
HoTT-stuff to the FF4.

--- a/flight/targets/quanton/fw/Makefile
+++ b/flight/targets/quanton/fw/Makefile
@@ -57,6 +57,7 @@ OPTMODULES += Airspeed/revolution
 OPTMODULES += UAVOHoTTBridge
 OPTMODULES += UAVOFrSKYSensorHubBridge
 OPTMODULES += UAVOLighttelemetryBridge
+OPTMODULES += PicoC
 
 # Paths
 OPUAVTALKINC = $(OPUAVTALK)/inc
